# spectral-forge

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs
docs/: MANUAL.md
docs/superpowers/: 2026-05-06-stabilization-backlog.md  STATUS.md
ideas/next-gen-modules/: 00-README.md  01-global-infrastructure.md  02-architectural-refactors.md  03-matrix-amp-nodes.md  10-circuit.md  11-life.md  12-kinetics.md  13-past.md  14-future.md  15-harmony.md  16-modulate.md  17-rhythm.md  18-geometry.md  19-punch.md  20-plpv-phase-cross-cutting.md  90-research-prompts.md  91-research-synthesis.md  99-implementation-roadmap.md
src/: bridge.rs  editor_ui.rs  lib.rs  param_ids.rs  params.rs  preset.rs  presets.rs
src/dsp/: amp_modes.rs  bin_physics.rs  (+16 more)
tests/: amp_nodes.rs  audio_rate_modulation.rs  bin_physics.rs  bin_physics_pipeline.rs  calibration.rs  calibration_roundtrip.rs  cepstrum.rs  chromagram.rs  circuit.rs  circuit_kernels.rs  curve_config.rs  curve_display_extent.rs  curve_layout.rs  curve_natural_at_max.rs  curve_node_automation.rs  editor_panel_dispatch.rs  empty_slot_smear_soak.rs  engine_contract.rs  future.rs  geometry.rs  global_system_grep.rs  harmonic_groups.rs  harmony_module.rs  heavy_cpu_flag.rs  history_buffer.rs  history_buffer_pipeline.rs  instantaneous_freq.rs  instantaneous_freq_pipeline.rs  kinetics_integration.rs  life_conservation.rs  master_soft_clip.rs  midi_plumbing.rs  mod_ring.rs  modulate.rs  modulation_ring.rs  module_spec_consistency.rs  module_switch_state_reset.rs  module_trait.rs  param_grid.rs  past.rs  (+21 more)
(+117 files in other folders)
