[workspace]
members = ["xtask"]
resolver = "2"

[package]
name = "spectral_forge"
version = "0.15.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
realfft = "3"
triple_buffer = "9"
parking_lot = "0.12"
num-complex = "0.4"
multiversion = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5.0"
opener = "0.7"
smallvec = "1"

[features]
# Enables probe infrastructure for calibration integration tests.
# Zero cost in normal builds (neither debug nor release).
probe = []

[[test]]
name = "calibration_roundtrip"
required-features = ["probe"]

[[test]]
name = "bin_physics_pipeline"
required-features = ["probe"]

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[profile.release]
lto = "thin"
opt-level = 3
strip = "symbols"

[profile.dev]
opt-level = 1

# Local patch: exposes EguiState::set_requested_size() as pub so we can trigger
# the CLAP request_resize() handshake at runtime for user-controlled UI scaling.
[patch."https://github.com/robbert-vdh/nih-plug.git"]
nih_plug_egui = { path = "vendor/nih_plug_egui" }
